# tabular_qa_bot_demo

./: README.md  pyproject.toml
tabular_qa_keywords/: elastic_retriever.py  elastic_retriever_test.py  mini_table.py
tabular_qa_llm/: elastic_retriever_and_table_reader.py
tabular_qa_semantic_search/: mini_table.py  mini_table_test.py  preprocess.py  preprocess_test.py
